[contextual tasks] zero state spacing fix
* Zero state in side panel previously was not perfectly centered
* Fix zero state margins so that is more robustly centered
* Note: this does not include suggestions yet, as those are AIM-side

https://screencast.googleplex.com/cast/NDcyMjQzODgzODQxOTQ1NnwyOWYxNmEzZC03YQ

Bug: b:475541511
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7488760
Commit-Queue: James Leung <jamesleung@google.com>
Cr-Commit-Position: refs/heads/main@{#1572022}

--- a/chrome/browser/resources/contextual_tasks/app.css
+++ b/chrome/browser/resources/contextual_tasks/app.css
@@ -47,7 +47,7 @@
   --error-top-line-color: #202124;
   --gradient-protection-width: 100%;
   --max-composebox-width: 692px;
-  --min-composebox-width: 200px;
+  --min-composebox-width: 150px;
   --paper-tooltip-background:rgba(255, 255, 255, 1);
   --paper-tooltip-text-color: rgba(0, 0, 0, 1);
   --protected-icon-background-color: #535353;
@@ -194,48 +194,21 @@ error-page {
   visibility: hidden;
 }
 
+:host([is-zero-state_]:not([is-shown-in-tab])) #composebox {
+  /* Left/right flexbox padding implicitly added via centering is 20px. */
+  width: calc(100% - 40px);
+}
+
 :host([is-zero-state_]) #composebox {
   bottom: 0;
   height: auto;
-  inset-inline-start: 20px;
   max-width: var(--max-composebox-width);
   min-width: var(--min-composebox-width);
   pointer-events: auto;
   position: relative;
   top: auto;
+  width: 100%;
   z-index: 2;
-  /* Left/right padding of parent is 20px. */
-  width: calc(100% - 20px);
-}
-
-@media (max-width: 900px) {
-  :host([is-zero-state_]) #composebox,
-  :host([is-zero-state_]) #composeboxHeaderWrapper {
-    inset-inline-start: 5%;
-    width: calc(90% - 20px);
-  }
-}
-@media (max-width: 650px) {
-  :host([is-zero-state_]) #composebox,
-  :host([is-zero-state_]) #composeboxHeaderWrapper {
-    inset-inline-start: 7.5%;
-    width: calc(85% - 20px);
-  }
-}
-
-@media (max-width: 480px) {
-  :host([is-zero-state_]) #composebox,
-  :host([is-zero-state_]) #composeboxHeaderWrapper {
-    inset-inline-start: 0;
-    width: calc(100% - 20px);
-  }
-}
-
-@media (min-width: 750px) {
-  :host([is-zero-state_]:not([is-shown-in-tab_])) #composebox
-  :host([is-zero-state_]:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
-    inset-inline-start: 40px;
-  }
 }
 
 .flex-center {
@@ -251,6 +224,7 @@ error-page {
   flex-direction: column;
   gap: 36px;
   height: 51%;
+  inset-inline-start: 0;
   justify-content: flex-end;
   min-height: 300px;
   overflow-anchor: none;
@@ -287,10 +261,8 @@ error-page {
   font-family: Google Sans, Roboto, Arial, sans-serif;
   font-size: 32px;
   font-weight: 500;
-  inset-inline-start: 20px;
   line-height: 100%;
   margin: 0;
-  margin-right: 20px; /* To push for earlier wrapping. */
   position: relative;
   z-index: 2;
 }
@@ -308,22 +280,32 @@ error-page {
   justify-content: flex-start;
   /* Same width so stays at same centering as composebox with flexbox. */
   max-width: var(--max-composebox-width);
-  min-width: var(--min-composebox-width);
   position: relative;
-  width: calc(100% - 20px);
+  width: calc(100% - 40px);
 }
 
 :host([is-zero-state_]) #composeboxHeaderWrapper {
   display: flex;
 }
 
+:host([is-zero-state_][is-shown-in-tab_]) .flex-center {
+  inset-inline-start: 76px;
+  width: calc(100% - 76px);
+}
+
+:host([is-zero-state_]:not([is-shown-in-tab_])) .flex-center {
+  gap: 24px;
+}
+
+:host([is-zero-state_]:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
+  inset-inline-start: 28px;
+  inset-inline-end: 20px;
+  width: calc(100% - 48px);  /* 20px space on right. */
+}
+
 @media (max-width: 480px) {
-  :host([is-shown-in-tab_]) .thread-header {
-    inset-inline-start: 30px;
-    position: absolute;
-  }
-  :host([is-shown-in-tab_]) #composeboxHeaderWrapper {
-    height: 64px;
+  :host([is-zero-state_][is-shown-in-tab_]) .flex-center {
+    inset-inline-start: 0;
     width: 100%;
   }
 }
@@ -336,28 +318,23 @@ error-page {
   :host(:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
     padding-bottom: 20px;
   }
-}
-
-@media (max-width: 480px) {
-  /* Higher specificity so it wins over other side panel formatting. */
-  :host(:not([is-shown-in-tab_])) .thread-header {
-    inset-inline-start: 28px;
-    position: absolute;
-  }
-  :host(:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
-    height: 64px;
-    width: 100%;
+  :host([is-zero-state_]) #toolbarOverlay::after {
+    height: 66px;
   }
 }
 
-@media (max-height: 480px) {
+@media (max-height: 580px) {
   :host([is-zero-state_]) #composeboxHeaderWrapper {
-    margin-top: 100px;
+    margin-top: 150px;
   }
 }
 
 @media (max-width: 280px) {
-  .thread-header {
+  :host([is-zero-state_]) .thread-header {
     font-size: 11vw;
+    inset-inline-start: 10px;
+  }
+  :host([is-zero-state_]) #composeboxHeaderWrapper {
+    width: calc(100% - 58px);
   }
 }
